--- a/Avanzometro/template/base.html
+++ b/Avanzometro/template/base.html
@@ -8,12 +8,10 @@
     <title>Avanzomentro</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    {% load staticfiles %}
-    <script src="{% static '../admin/css/bootstrap.min.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="{% static '../admin/css/main.css' %}"> 
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}"> 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,9 +35,10 @@
 	</body>	
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="{% static 'admin/js/bootstrap.min.js' %}"></script>
-    <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script type="text/javascript" href="{% static 'js/bootstrap.min.js' %}"></script>
+	<script type="text/javascript" href="{% static 'js/npm.js' %}"></script>
+  	<script type="text/javascript" href="{% static 'js/main.js' %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script>-->
   </body>
