--- a/Avanzometro/template/main_page.html
+++ b/Avanzometro/template/main_page.html
@@ -8,7 +8,7 @@
     <title>Avanzomentro</title>
 
     <!-- Bootstrap -->
-    {% load staticfiles %}
+    {% load static %}
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
  <body>
- 		
+
 			<h1>Welcome to Django Store</h1>
 			{% if user.username %}
 			<p>Welcome {{ user.username }}!
