--- a/Avanzometro/template/base.html
+++ b/Avanzometro/template/base.html
@@ -11,7 +11,6 @@
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/main.css' %}"> 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,16 +20,23 @@
     <![endif]-->
   </head>
   <body>
-    <div id="nav">
-		<a href="/">home</a> |
-		{% if user.is_authenticated %}
-		welcome {{ user.username }}
-		(<a href="/logout">logout</a>)
-		{% else %}
-		<a href="/login/">login</a> |
-		<a href="/register/">register</a>
-		{% endif %}
-	</div>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Avanzómetro</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Inicio</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
+          <li><a href="/login"><span class="glyphicon glyphicon-user"></span>Cerrar sesion {{ user.username }}</a></li>
+          {% else %}
+          <li><a href="/login"><span class="glyphicon glyphicon-user"></span>Ingresar</a></li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
 		{% block content %}{% endblock %}
 	</body>	
 
@@ -38,7 +44,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script type="text/javascript" href="{% static 'js/bootstrap.min.js' %}"></script>
 	<script type="text/javascript" href="{% static 'js/npm.js' %}"></script>
-  	<script type="text/javascript" href="{% static 'js/main.js' %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script>-->
   </body>
