--- a/Avanzometro/template/registration/login.html
+++ b/Avanzometro/template/registration/login.html
@@ -1,17 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
+{% block content %}
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
  	<title>Avanzometro</title>
- 	<!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"-->
-	<!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"-->
      	{% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
-
 </head>
 <body>
 <div class="container">
@@ -22,14 +14,16 @@
           <div class="row">
             <div class="col-lg-12">
               <form id="login-form" method="post" action="." role="form" style="display: block;">
+              	{% csrf_token %}
                 <h2>LOGIN</h2>
                   <div class="form-group">
-                  	<label for="id_username">Username</label>
-                    <p>{{ form.username }}</p>
+                  	<label for="id_username">Username</label><br>
+                    <input id="id_username" type="text" name="username">
                   </div>
                   <div class="form-group">
                   	<label for="id_password">Contrasena</label>
-                    <p>{{ form.password }}</p>
+                    <br>
+                    <input id="id_password" type="password" name="password">
                   </div>
                   <div class="col-xs-6 form-group pull-left checkbox">
                     <input id="checkbox1" type="checkbox" name="remember">
@@ -50,9 +44,8 @@
 					        
 				  </div>
 				  {% else %}
-				  {% csrf_token %}
                   <div class="form-group">
-                  	{{ user_form.as_p }}
+                  	 {% csrf_token %} {{ form.as_p }}
                   </div>
                 
                   <div class="form-group">
@@ -107,4 +100,4 @@
 });
 
   </script>
-</html>
+{% endblock %}
