--- a/Avanzometro/template/registration/login.html
+++ b/Avanzometro/template/registration/login.html
@@ -1,11 +1,27 @@
-{% extends "base.html" %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
  	<title>Avanzometro</title>
      	{% load static %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Avanzómetro</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Inicio</a></li>
+        </ul>
+      </div>
+    </nav>
 <div class="container">
    <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -15,22 +31,22 @@
             <div class="col-lg-12">
               <form id="login-form" method="post" action="." role="form" style="display: block;">
               	{% csrf_token %}
-                <h2>LOGIN</h2>
+                <h2>INGRESAR</h2>
                   <div class="form-group">
-                  	<label for="id_username">Username</label><br>
-                    <input id="id_username" type="text" name="username">
+                  	<label for="id_username">Email</label><br>
+                    <input id="id_username" type="email" name="username" pattern="[a-zA-Z_0-9]+@[a-zA-Z0-9]+.com" required>
                   </div>
                   <div class="form-group">
-                  	<label for="id_password">Contrasena</label>
+                  	<label for="id_password">Contraseña</label>
                     <br>
-                    <input id="id_password" type="password" name="password">
+                    <input id="id_password" type="password" name="password" required>
                   </div>
                   <div class="col-xs-6 form-group pull-left checkbox">
-                    <input id="checkbox1" type="checkbox" name="remember">
-                    <label for="checkbox1">Recordarme</label>   
+                    <input id="checkbox" type="checkbox" name="remember" checked>
+                    <label for="checkbox">Recordarme</label>   
                   </div>
                   <div class="col-xs-6 form-group pull-right">     
-                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="login">
+                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Ingresar">
                         <input type="hidden" name="next" value="/" />
                   </div>
 
@@ -64,7 +80,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-xs-6 tabs">
-              <a href="#" class="active" id="login-form-link"><div class="login">LOGIN</div></a>
+              <a href="#" class="active" id="login-form-link"><div class="login">INGRESAR</div></a>
             </div>
             <div class="col-xs-6 tabs">
               <a href="#" id="register-form-link"><div class="register">REGISTRARSE</div></a>
@@ -100,4 +116,4 @@
 });
 
   </script>
-{% endblock %}
+</html>
